--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
-        <p class="footertext">ToDoKiosk {{ version }} - CTCL 2023-2024</p>
+        <p class="footertext">ToDoKiosk-rust {{ version }} - CTCL 2023-2024</p>
     </body>
 </html>
