--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
         <section style="border-color: {{ task.color }}">
             <p class="tasksummary">{{ task.summary }}</p>
             <hr>
-            <p class="status"><span style="color: {{ priority|get_item:task.priority|get_item:"color" }}">Priority: {{ priority|get_item:task.priority|get_item:"name" }}</span> - Status: {{ task.status }} <br> Created: {{ task.created }} - Modified: {{ task.modified }}</p>
+            <p class="status"><span style="color: {{ task.priority.color }}">Priority: {{ task.priority.name }}</span> - <span style="color: {{ task.status.color }}">Status: {{ task.status.name }}</span><br>Created: {{ task.created }} - Modified: {{ task.modified }}</p>
         </section>{% endfor %}{% endif %}
         <hr>
 {% include "footer.html" %}
