--- a/static/common.css
+++ b/static/common.css
@@ -11,11 +11,30 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
 }
 
-@for $i from 1 through 6 {
-    h#{$i} {
-        font-size: 2.66 - (0.33 * $i) + "em";
-    }
+h1 {
+    font-size: 2.33em;
 }
+
+h2 {
+    font-size: 2.00em;
+}
+
+h3 {
+    font-size: 1.66em;
+}
+
+h4 {
+    font-size: 1.33em;
+}
+
+h5 {
+    font-size: 1em;
+}
+
+h6 {
+    font-size: 0.66em;
+}
+
 
 hr {
     border-color: #FFFFFF;
